# calclab3

./: CMakeLists.txt  readme.md  report.sh
project/: eigen_solver.h  function_holder.h  interpolation.h  main.cpp  matplotlibcpp.h  matrix_utils.h  system_solver.h  test_funcions.h  utils.h
report/: extraQuestions.tex  report.tex
